--- a/yaml/releaseBuild.yml
+++ b/yaml/releaseBuild.yml
@@ -45,20 +45,21 @@ stages:
       condition: succeededOrFailed()
 
     - pwsh: |
-        Set-Location "$(Build.SourcesDirectory)"
+        Set-Location "$(Build.SourcesDirectory)/TextUtility"
+        Get-ChildItem -Recurse -File -Name | Write-Verbose -Verbose
         ./build.ps1 -Clean
         Get-ChildItem -Recurse -File -Name | Write-Verbose -Verbose
 
       displayName: Execute Build
 
     - pwsh: |
-        $signSrcPath = "$(Build.SourcesDirectory)/out"
+        $signSrcPath = "$(Build.SourcesDirectory)/TextUtility/out"
         # Set signing src path variable 
         $vstsCommandString = "vso[task.setvariable variable=signSrcPath]${signSrcPath}"
         Write-Host ("sending " + $vstsCommandString)
         Write-Host "##$vstsCommandString"
 
-        $signOutPath = "$(Build.SourcesDirectory)/signed"
+        $signOutPath = "$(Build.SourcesDirectory)/TextUtility/signed"
         $null = New-Item -ItemType Directory -Path $signOutPath
         # Set signing out path variable
         $vstsCommandString = "vso[task.setvariable variable=signOutPath]${signOutPath}"
@@ -70,7 +71,7 @@ stages:
         Write-Host "sending " + $vstsCommandString
         Write-Host "##$vstsCommandString"
 
-        $packageVersion = (Import-PowerShellDataFile $(Build.SourcesDirectory)/out/Microsoft.PowerShell.TextUtility/Microsoft.PowerShell.TextUtility.psd1).ModuleVersion
+        $packageVersion = (Import-PowerShellDataFile $(Build.SourcesDirectory)/TextUtility/out/Microsoft.PowerShell.TextUtility/Microsoft.PowerShell.TextUtility.psd1).ModuleVersion
         $vstsCommandString = "vso[task.setvariable variable=PackageVersion]$packageVersion"
         Write-Host ("sending " + $vstsCommandString)
         Write-Host "##$vstsCommandString"
@@ -85,9 +86,9 @@ stages:
     - template: EsrpSign.yml@ComplianceRepo
       parameters:
         # the folder which contains the binaries to sign
-        buildOutputPath: $(Build.SourcesDirectory)/out
+        buildOutputPath: $(Build.SourcesDirectory)/TextUtility/out
         # the location to put the signed output
-        signOutputPath: $(Build.SourcesDirectory)/signed/Microsoft.PowerShell.TextUtility
+        signOutputPath: $(Build.SourcesDirectory)/TextUtility/signed/Microsoft.PowerShell.TextUtility
         # the certificate ID to use
         certificateId: "CP-230012"
         # The file pattern to use
@@ -101,25 +102,25 @@ stages:
 
     - template: Sbom.yml@ComplianceRepo
       parameters:
-        BuildDropPath: $(Build.SourcesDirectory)/signed/Microsoft.PowerShell.TextUtility
+        BuildDropPath: $(Build.SourcesDirectory)/TextUtility/signed/Microsoft.PowerShell.TextUtility
         Build_Repository_Uri: 'https://github.com/powershell/textutility'
         PackageName: 'Microsoft.PowerShell.TextUtility'
         PackageVersion: $(PackageVersion)
 
     - pwsh: |
-        New-Item -Path $(Build.SourcesDirectory)/SignedZip -ItemType Directory -ErrorAction Ignore
-        Compress-Archive -Path $(Build.SourcesDirectory)/signed/Microsoft.PowerShell.TextUtility -DestinationPath $(Build.SourcesDirectory)/SignedZip/Microsoft.PowerShell.TextUtility.zip -Force
+        New-Item -Path $(Build.SourcesDirectory)/TextUtility/SignedZip -ItemType Directory -ErrorAction Ignore
+        Compress-Archive -Path $(Build.SourcesDirectory)/TextUtility/signed/Microsoft.PowerShell.TextUtility -DestinationPath $(Build.SourcesDirectory)/TextUtility/SignedZip/Microsoft.PowerShell.TextUtility.zip -Force
       displayName: 'Compress archive'
       condition: succeededOrFailed()
 
     - task: PublishPipelineArtifact@1
       inputs:
-        targetpath: $(Build.SourcesDirectory)/signed/Microsoft.PowerShell.TextUtility
+        targetpath: $(Build.SourcesDirectory)/TextUtility/signed/Microsoft.PowerShell.TextUtility
         artifactName: Signed
 
     - task: PublishPipelineArtifact@1
       inputs:
-        targetpath: $(Build.SourcesDirectory)/SignedZip
+        targetpath: $(Build.SourcesDirectory)/TextUtility/SignedZip
         artifactName: SignedZip
 
 - stage: compliance
