--- a/yaml/releaseBuild.yml
+++ b/yaml/releaseBuild.yml
@@ -1,35 +1,13 @@
-name: $(Date:yyyyMMdd)$(Rev:.rr)
+# release build
+name: TextUtility-Release-$(Date:yyyyMMdd)$(Rev:.rr)
+trigger: none
+
+pr: none
 
 variables:
-  # Don't download unneeded packages
-  - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
-    value: 'true'
-  # Improve performance by not sending telemetry
-  - name: DOTNET_CLI_TELEMETRY_OPTOUT
-    value: 'true'
-
-trigger:
-  batch: true
-  branches:
-    include:
-      - main
-  paths:
-    exclude:
-      - /.dependabot/*
-      - /.poshchan/*
-      - /.github/**/*
-      - /.vscode/**/*
-      - /.vsts-ci/misc-analysis.yml
-      - /tools/**/*
-      - .editorconfig
-      - .gitattributes
-      - .gitignore
-      - /docs/**/*
-      - /CHANGELOG.md
-      - /CONTRIBUTING.md
-      - /README.md
-      - /LICENSE.txt
-      - /CODE_OF_CONDUCT.md
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+  DOTNET_CLI_TELEMETRY_OPTOUT: 1
+  POWERSHELL_TELEMETRY_OPTOUT: 1
 
 resources:
   repositories:
@@ -37,84 +15,140 @@ resources:
     type: github
     endpoint: ComplianceGHRepo
     name: PowerShell/compliance
+    ref: master
 
 stages:
 - stage: BuildAndSign
   displayName: Build and Sign
+  pool:
+    name: PowerShell1ES
+    demands:
+    - ImageOverride -equals PSMMS2019-Secure
   jobs:
   - job: 'BuildAndSign'
+    displayName: Build and Sign
     variables:
     - group: ESRP
-    displayName: Build and Sign
-    pool:
-      name: PowerShell1ES
-      demands:
-      - ImageOverride -equals PSMMS2019-Secure
     steps:
+    - checkout: self
+
     - task: UseDotNet@2
       displayName: 'Use .NET Core sdk'
       inputs:
         packageType: sdk
         includePreviewVersions: true
         version: 6.x
-    - powershell: |
+
+    - pwsh: |
         Get-ChildItem -Path env:
       displayName: Capture environment
       condition: succeededOrFailed()
+
     - pwsh: |
-        # build agents get reused so we make sure to remove the old archive
-        Remove-Item -Path $(Build.SourcesDirectory)/SignedZip -Recurse -Force -ErrorAction Ignore
-        Remove-Item -Path $(Build.SourcesDirectory)/out -Recurse -Force -ErrorAction Ignore
-        Remove-Item -Path $(Build.SourcesDirectory)/signed -Recurse -Force -ErrorAction Ignore
-        .\build.ps1 -Clean
-        Remove-Item .\out\*.pdb
-        $packageVersion = (Import-PowerShellDataFile $(Build.SourcesDirectory)/out/Microsoft.PowerShell.TextUtility/Microsoft.PowerShell.TextUtility.psd1).ModuleVersion
+        Set-Location "$(Build.SourcesDirectory)/TextUtility"
+        Get-ChildItem -Recurse -File -Name | Write-Verbose -Verbose
+        ./build.ps1
+        Get-ChildItem -Recurse -File -Name | Write-Verbose -Verbose
+
+      displayName: Execute Build
+
+    - pwsh: |
+        Set-Location "$(Build.SourcesDirectory)/TextUtility"
+        $signSrcPath = "$(Build.SourcesDirectory)/TextUtility/out"
+        # Set signing src path variable 
+        $vstsCommandString = "vso[task.setvariable variable=signSrcPath]${signSrcPath}"
+        Write-Host ("sending " + $vstsCommandString)
+        Write-Host "##$vstsCommandString"
+
+        $signOutPath = "$(Build.SourcesDirectory)/TextUtility/signed"
+        $null = New-Item -ItemType Directory -Path $signOutPath
+        # Set signing out path variable
+        $vstsCommandString = "vso[task.setvariable variable=signOutPath]${signOutPath}"
+        Write-Host "sending " + $vstsCommandString
+        Write-Host "##$vstsCommandString"
+
+        # Set path variable for guardian codesign validation
+        $vstsCommandString = "vso[task.setvariable variable=GDN_CODESIGN_TARGETDIRECTORY]${signOutPath}"
+        Write-Host "sending " + $vstsCommandString
+        Write-Host "##$vstsCommandString"
+
+        $packageVersion = ./build.ps1 -GetPackageVersion
         $vstsCommandString = "vso[task.setvariable variable=PackageVersion]$packageVersion"
         Write-Host ("sending " + $vstsCommandString)
         Write-Host "##$vstsCommandString"
-      displayName: Build
-    - publish: "out/"
+
+      displayName: Setup variables for signing
+
+    - publish: "$(Build.SourcesDirectory)/TextUtility/out/"
       artifact: out
+
+      displayName: Publish unsigned module files
+
+    - checkout: ComplianceRepo
 
     - template: EsrpSign.yml@ComplianceRepo
       parameters:
         # the folder which contains the binaries to sign
-        buildOutputPath: $(Build.SourcesDirectory)/out
+        buildOutputPath: $(signSrcPath)
         # the location to put the signed output
-        signOutputPath: $(Build.SourcesDirectory)/signed/Microsoft.PowerShell.TextUtility
+        signOutputPath: $(signOutPath)
         # the certificate ID to use
-        certificateId: "CP-460906"
+        certificateId: "CP-230012"
         # The file pattern to use
         # If not using minimatch: comma separated, with * supported
         # If using minimatch: newline separated, with !, **, and * supported.
         # See link in the useMinimatch comments.
-        pattern: 'Microsoft.PowerShell.*.dll,Microsoft.PowerShell.*.psd1,Microsoft.PowerShell.*.psm1'
+        pattern: '*.dll,*.psd1,*.psm1,*.ps1xml'
         # decides if the task should use minimatch for the pattern matching.
         # https://github.com/isaacs/minimatch#features
         useMinimatch: false
 
+    # 
+    - pwsh: |
+        $repoRoot = "$(Build.SourcesDirectory)/TextUtility"
+        Set-Location $repoRoot
+        Get-ChildItem -Path ${repoRoot} -File -Recurse | Out-String -Str | Write-Verbose -Verbose
+        Copy-Item -Path "${repoRoot}/src/dictionary.txt" "${repoRoot}/signed/Microsoft.PowerShell.TextUtility"
+
+      displayName: Copy dictionary.txt
+
     - template: Sbom.yml@ComplianceRepo
       parameters:
-        BuildDropPath: $(Build.SourcesDirectory)/signed/Microsoft.PowerShell.TextUtility
+        BuildDropPath: $(Build.SourcesDirectory)/TextUtility/signed/Microsoft.PowerShell.TextUtility
         Build_Repository_Uri: 'https://github.com/powershell/textutility'
         PackageName: 'Microsoft.PowerShell.TextUtility'
         PackageVersion: $(PackageVersion)
 
     - pwsh: |
-        New-Item -Path $(Build.SourcesDirectory)/SignedZip -ItemType Directory -ErrorAction Ignore
-        Compress-Archive -Path $(Build.SourcesDirectory)/signed/Microsoft.PowerShell.TextUtility -DestinationPath $(Build.SourcesDirectory)/SignedZip/Microsoft.PowerShell.TextUtility.zip -Force
+        set-location $(Build.SourcesDirectory)/TextUtility
+        ./build.ps1 -Package -Signed -NoBuild
+        New-Item -Type Directory nupkg
+        Copy-Item *.nupkg nupkg -ErrorAction Ignore -Verbose
+        Get-ChildItem -Recurse -File -Name | out-string -str | Write-Verbose -Verbose
+
+      displayName: Construct Signed Module with SBOM
+
+    - pwsh: |
+        New-Item -Path $(Build.SourcesDirectory)/TextUtility/SignedZip -ItemType Directory -ErrorAction Ignore
+        Compress-Archive -Path $(Build.SourcesDirectory)/TextUtility/signed/Microsoft.PowerShell.TextUtility -DestinationPath $(Build.SourcesDirectory)/TextUtility/SignedZip/Microsoft.PowerShell.TextUtility.zip -Force
+
       displayName: 'Compress archive'
       condition: succeededOrFailed()
 
     - task: PublishPipelineArtifact@1
       inputs:
-        targetpath: $(Build.SourcesDirectory)/signed/Microsoft.PowerShell.TextUtility
+        targetpath: $(Build.SourcesDirectory)/TextUtility/signed/Microsoft.PowerShell.TextUtility
         artifactName: Signed
 
     - task: PublishPipelineArtifact@1
       inputs:
-        targetpath: $(Build.SourcesDirectory)/SignedZip
+        targetpath: $(Build.SourcesDirectory)/TextUtility/SignedZip
         artifactName: SignedZip
+
+    - task: PublishPipelineArtifact@1
+      inputs:
+        targetpath: $(Build.SourcesDirectory)/TextUtility/nupkg
+        artifactName: nupkg
 
 - stage: compliance
   displayName: Compliance
@@ -133,6 +167,7 @@ stages:
 
     - pwsh: |
         Get-ChildItem -Path "$(Pipeline.Workspace)\Signed" -Recurse
+
       displayName: Capture downloaded artifacts
 
     - template: assembly-module-compliance.yml@ComplianceRepo
@@ -148,6 +183,6 @@ stages:
         optionsRulesDBPath: ''
         optionsFTPath: ''
         # tsa-upload
-        codeBaseName: 'TextUtility_20201120'
+        codeBaseName: 'textutility_202305'
         # selections
         APIScan: false # set to false when not using Windows APIs.
