Change tests to not use PS7 commands for path combination.
Also mock PSStyle variable.

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   ci:
-    name: pester
+    name: Build and Test
     strategy:
       matrix:
         os: [ windows-latest, macos-latest, ubuntu-latest ]
