Drop support for Windows PowerShell.
It's not possible with the use of System.Text.Json.
Add another test result file to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ out/
 project.lock.json
 .DS_Store
 Microsoft.PowerShell.TextUtility.xml
+testResults.xml
 # VSCode directories that are not at the repository root
 /**/.vscode/
