--- a/src/code/Microsoft.PowerShell.TextUtility.csproj
+++ b/src/code/Microsoft.PowerShell.TextUtility.csproj
@@ -14,10 +14,10 @@
   </PropertyGroup>
   
     <ItemGroup>
-        <PackageReference Include="PowerShellStandard.Library" Version="5.1.0-*">
+        <PackageReference Include="PowerShellStandard.Library">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="System.Text.Json" Version="6.0.6" >
+        <PackageReference Include="System.Text.Json" >
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
     </ItemGroup>
