--- a/.pipelines/TextUtility-Official.yml
+++ b/.pipelines/TextUtility-Official.yml
@@ -1,29 +1,26 @@
-name: TextUtility-ModuleBuild-$(Build.BuildId)
-trigger: none
-pr: none
+trigger:
+- main
 
 schedules:
 - cron: '0 3 * * 1'
-  displayName: Weekly Build
+  displayName: Weekly CodeQL
   branches:
     include:
     - main
   always: true
 
 parameters:
-  - name: 'publishToPowerShellGallery'
-    displayName: 'Publish module to PowerShell gallery'
-    type: boolean
-    default: false
+- name: debug
+  displayName: Enable debug output
+  type: boolean
+  default: false
 
 variables:
+  system.debug: ${{ parameters.debug }}
   BuildConfiguration: Release
+  WindowsContainerImage: onebranch.azurecr.io/windows/ltsc2022/vse2022:latest
   DOTNET_NOLOGO: true
   DOTNET_GENERATE_ASPNET_CERTIFICATE: false
-  DOTNET_CLI_TELEMETRY_OPTOUT: 1
-  POWERSHELL_TELEMETRY_OPTOUT: 1
-  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-  WindowsContainerImage: onebranch.azurecr.io/windows/ltsc2022/vse2022:latest
 
 resources:
   repositories:
@@ -36,16 +33,17 @@ extends:
   # https://aka.ms/obpipelines/templates
   template: v2/OneBranch.Official.CrossPlat.yml@templates
   parameters:
-    featureFlags:
-      WindowsHostVersion: '1ESWindows2022'
     globalSdl: # https://aka.ms/obpipelines/sdl
       asyncSdl:
         enabled: true
         forStages: [build]
-      #credscan:
-      #  enabled: true
-      #  scanfolder: $(Build.SourcesDirectory)
-      #  suppressionsFile: $(Build.SourcesDirectory)\.config\suppress.json
+    featureFlags:
+      EnableCDPxPAT: false
+      WindowsHostVersion:
+        Version: 2022
+        Network: KS3
+    release:
+      category: NonAzure
     stages:
     - stage: build
       jobs:
@@ -54,10 +52,7 @@ extends:
         pool:
           type: windows
         variables:
-        - name: ob_outputDirectory
-          value: $(Build.SourcesDirectory)/out
-        #- name: ob_sdl_credscan_suppressionsFile
-        #  value: $(Build.SourcesDirectory)\.config\suppress.json
+          ob_outputDirectory: $(Build.SourcesDirectory)/out
         steps:
           - pwsh: |
               Write-Verbose -Verbose ((Get-Item $(Build.SourcesDirectory)).FullName)
